--- a/frontend/src/Components/StudentEnrollment/StudentEnroll.css
+++ b/frontend/src/Components/StudentEnrollment/StudentEnroll.css
@@ -1,6 +1,7 @@
 .enrollment-container {
   max-width: 1500px;
   margin: 40px auto;
+  margin-left: 300px;
   padding: 40px;
   background: #ffffff;
   border-radius: 8px;
